[gd_scene load_steps=15 format=2]

[ext_resource path="res://Objects/Hydrovent/vent.png" type="Texture" id=1]
[ext_resource path="res://FX/Particles/cloudlet_128x128.png" type="Texture" id=2]
[ext_resource path="res://Objects/Hydrovent/Hydrovent.gd" type="Script" id=3]
[ext_resource path="res://FX/Lights/128x128.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00343643, 0.0790378, 0.85567, 0.989691 )
colors = PoolColorArray( 0, 0, 0, 0, 0.321569, 0.321569, 0.321569, 1, 0.784314, 0.784314, 0.784314, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.354545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 9.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 117.09
angular_velocity = 244.36
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 1.03
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 29.7478
height = 38.9227

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 36.8532, 84.0236 )

[sub_resource type="Animation" id=9]
length = 4.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "toggle_collision"
}, {
"args": [  ],
"method": "toggle_collision"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( -36.8828, 39.8002, -36.3525, 28.1329, -27.1601, 14.1675, -22.9175, 1.96996, -22.3871, -33.3854, -18.6749, -61.316, -14.9626, -61.6696, -9.48248, -69.4477, 15.2663, -69.271, 18.8018, -54.4217, 21.9838, -25.2536, 24.9889, -7.92946, 26.9335, 9.92498, 36.4794, 28.4865, 36.833, 39.0931, 24.105, 47.5784, -26.4531, 47.932 )

[node name="Hydrovent" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 1 )
position = Vector2( 0, -57.9639 )
amount = 25
lifetime = 1.5
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10.3718 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12.4931 )
shape = SubResource( 7 )

[node name="InfluenceArea" type="Area2D" parent="."]
position = Vector2( 0, -54.9018 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea"]
position = Vector2( 0, -84.7972 )
shape = SubResource( 8 )

[node name="ActivationTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cycle = SubResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
position = Vector2( 0, -17.6777 )
texture = ExtResource( 4 )
color = Color( 0, 1, 0.0166667, 1 )
energy = 0.5
range_height = 1024.0

[node name="Sprite2" type="Sprite" parent="Light2D"]
modulate = Color( 2, 0.3, 0, 0.13 )
position = Vector2( 0, -1.05946 )
texture = ExtResource( 4 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 10 )
[connection signal="body_entered" from="InfluenceArea" to="." method="_on_InfluenceArea_body_entered"]
[connection signal="body_exited" from="InfluenceArea" to="." method="_on_InfluenceArea_body_exited"]
